--- a/.gitignore
+++ b/.gitignore
@@ -711,4 +711,4 @@ FodyWeavers.xsd
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
-# End of https://www.toptal.com/developers/gitignore/api/python,pycharm,virtualenv,venv,visualstudio,visualstudiocode
+. idea
