--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     # Run the job against multiple Python versions.
     strategy:
       matrix:
-        python-version: [ "3.8", "3.9", "3.10","3.11" ]
+        python-version: [ "3.10","3.11" ]
 
     steps:
       # 1. Checkout the repository code.
