--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,4 +47,4 @@ jobs:
 
       # Run main application with Ollama backend
       - name: Run main.py
-        run: python ./BACK/main.py --qa ./BACK/datasets/qa/qa_AssuranceAuto.json
+        run: nohup python ./BACK/main.py --qa ./BACK/datasets/qa/qa_AssuranceAuto.json &
