--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fastapi==0.115.5
-langchain_community==0.2.19
+langchain_community==0.3.7
 annotated-types==0.7.0
 anyio==4.5.2
 certifi==2024.8.30
@@ -14,19 +14,18 @@ sniffio==1.3.1
 typing-extensions==4.12.2
 tzdata==2024.1
 fastapi[standard]==0.115.5
-langchain-ollama==0.1.3
+langchain-ollama==0.2.1
 tokenizers>=0.13.2,<0.22
-chromadb==0.5.23
+chromadb==0.6.3
 aioboto3==13.4.0
-torch==2.4.1
+torch==2.5.1
 openai==1.60.0
-transformers==4.32.1
-tiktoken==0.7.0
-git+https://github.com/gusye1234/nano-vectordb.git@main#egg=nano-vectordb
+transformers==4.48.1
+tiktoken==0.8.0
+nano_vectordb==0.0.4.3
 pyvis==0.3.2
 numpy==1.26.4
 pdfminer==20191125
 pdfminer.six==20240706
 openai-whisper==20240930
 setuptools-rust==1.10.2
-
